Add JF_DIST_MIN_PORT and JF_DIST_MAX_PORT

--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -1,7 +1,33 @@
-# release always starts in a distributed mode
+# Release always starts in a distributed mode
 # but to provide unified way of configuring Jellyfish
 # distribution both in the local and production environment
 # we introduce our own env vars and use them to
-# set RELASE_NODE and RELASE_COOKIE
+# set RELASE_NODE and RELASE_COOKIE.
 export RELEASE_NODE=${JF_NODE_NAME:-${RELEASE_NODE:-jellyfish}}
 export RELEASE_COOKIE=${JF_COOKIE:-${RELEASE_COOKIE:-"$(cat "$RELEASE_ROOT/releases/COOKIE")"}}
+
+# We only set min and max ports for start and daemon commands.
+# In other case, when someone wants to expose only one port 
+# (JF_DIST_MIN_PORT==JF_DIST_MAX_PORT), we won't be able to 
+# connect to already running node with the `remote` command.
+if [ "$JF_DIST_MIN_PORT" != "" ] ; then
+    case $RELEASE_COMMAND in
+    start*|daemon*)
+        ELIXIR_ERL_OPTIONS="$ELIXIR_ERL_OPTIONS -kernel inet_dist_listen_min $JF_DIST_MIN_PORT"
+        export ELIXIR_ERL_OPTIONS
+        ;;
+    *)
+        ;;
+    esac
+fi
+
+if [ "$JF_DIST_MAX_PORT" != "" ] ; then
+    case $RELEASE_COMMAND in
+    start*|daemon*)
+        ELIXIR_ERL_OPTIONS="$ELIXIR_ERL_OPTIONS -kernel inet_dist_listen_max $JF_DIST_MAX_PORT"
+        export ELIXIR_ERL_OPTIONS
+        ;;
+    *)
+        ;;
+    esac
+fi
