--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -6,6 +6,11 @@
 export RELEASE_NODE=${JF_NODE_NAME:-${RELEASE_NODE:-jellyfish}}
 export RELEASE_COOKIE=${JF_COOKIE:-${RELEASE_COOKIE:-"$(cat "$RELEASE_ROOT/releases/COOKIE")"}}
 
+# Always use longnames.
+# They are required to form a cluster across diffrent machines.
+# In development, we also use longnames (when starting a new node) 
+export RELEASE_DISTRIBUTION=name
+
 # We only set min and max ports for start and daemon commands.
 # In other case, when someone wants to expose only one port 
 # (JF_DIST_MIN_PORT==JF_DIST_MAX_PORT), we won't be able to 
