Set default cookie value

--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -4,7 +4,7 @@
 # we introduce our own env vars and use them to
 # set RELASE_NODE and RELASE_COOKIE.
 export RELEASE_NODE=${JF_NODE_NAME:-${RELEASE_NODE:-jellyfish}}
-export RELEASE_COOKIE=${JF_COOKIE:-${RELEASE_COOKIE:-"$(cat "$RELEASE_ROOT/releases/COOKIE")"}}
+export RELEASE_COOKIE=${JF_COOKIE:-${RELEASE_COOKIE:-panuozzo-pollo-e-pancetta}}
 
 # Always use longnames.
 # They are required to form a cluster across diffrent machines.
