--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -6,10 +6,10 @@
 export RELEASE_NODE=${JF_NODE_NAME:-${RELEASE_NODE:-jellyfish}}
 export RELEASE_COOKIE=${JF_COOKIE:-${RELEASE_COOKIE:-panuozzo-pollo-e-pancetta}}
 
-# Always use longnames.
+# Use longnames by default.
 # They are required to form a cluster across diffrent machines.
-# In development, we also use longnames (when starting a new node) 
-export RELEASE_DISTRIBUTION=name
+# In development, we also use longnames (when starting a new node).
+export RELEASE_DISTRIBUTION=${JF_DIST_MODE:-${RELEASE_DISTRIBUTION:-name}}
 
 # We only set min and max ports for start and daemon commands.
 # In other case, when someone wants to expose only one port 
