Small docs improvements

--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -1,8 +1,7 @@
-# Release always starts in a distributed mode
-# but to provide unified way of configuring Jellyfish
-# distribution both in the local and production environment
-# we introduce our own env vars and use them to
-# set RELASE_NODE and RELASE_COOKIE.
+# We introduce our own env vars and use them to set
+# RELEASE_NODE and RELEASE_COOKIE.
+# This is to provide a unified way of configuring Jellyfish distribution
+# in both development and production environments
 export RELEASE_NODE=${JF_NODE_NAME:-${RELEASE_NODE:-jellyfish}}
 export RELEASE_COOKIE=${JF_COOKIE:-${RELEASE_COOKIE:-panuozzo-pollo-e-pancetta}}
 
