--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -2,8 +2,8 @@
 # RELEASE_NODE and RELEASE_COOKIE.
 # This is to provide a unified way of configuring Jellyfish distribution
 # in both development and production environments
-export RELEASE_NODE=${JF_NODE_NAME:-${RELEASE_NODE:-jellyfish}}
-export RELEASE_COOKIE=${JF_COOKIE:-${RELEASE_COOKIE:-panuozzo-pollo-e-pancetta}}
+export RELEASE_NODE=${JF_DIST_NODE_NAME:-${RELEASE_NODE:-jellyfish}}
+export RELEASE_COOKIE=${JF_DIST_COOKIE:-${RELEASE_COOKIE:-panuozzo-pollo-e-pancetta}}
 
 # Use longnames by default.
 # They are required to form a cluster across diffrent machines.
