Change default cookie

--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -3,7 +3,7 @@
 # This is to provide a unified way of configuring Jellyfish distribution
 # in both development and production environments
 export RELEASE_NODE=${JF_DIST_NODE_NAME:-${RELEASE_NODE:-jellyfish}}
-export RELEASE_COOKIE=${JF_DIST_COOKIE:-${RELEASE_COOKIE:-panuozzo-pollo-e-pancetta}}
+export RELEASE_COOKIE=${JF_DIST_COOKIE:-${RELEASE_COOKIE:-jellyfish_cookie}}
 
 # Use longnames by default.
 # They are required to form a cluster across diffrent machines.
