r_hostname -> resolved_hostname

--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -9,7 +9,7 @@ if [ "$JF_DIST_ENABLED" == "true" ]; then
     #
     # We also try to read RELEASE_DISTRIBUTION env var
     # to allow for calling `remote` command with JF_DIST_ENABLED set.
-    # In other case, RELEASE_DISTRIBUTION will always be set to true.
+    # In other case, RELEASE_DISTRIBUTION will always be set to none.
     # This is a little hack. 
     # We can get rid of it once we move to the reverse DNS strategy.
     export RELEASE_DISTRIBUTION=${RELEASE_DISTRIBUTION:-none}
