[RTC-405] Resolve FQDNs in DNS cluster strategy (#137)

--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -3,18 +3,16 @@
 # This is to have a unified way of configuring Jellyfish distribution
 # in both development and production environments
 if [ "$JF_DIST_ENABLED" == "true" ]; then
-    export RELEASE_NODE=${JF_DIST_NODE_NAME:-$RELEASE_NODE}
-    export RELEASE_COOKIE=${JF_DIST_COOKIE:-${RELEASE_COOKIE:-jellyfish_cookie}}
-
-    if [ "$RELEASE_NODE" == "" ]; then
-        echo "JF_DIST_ENABLED has been set but JF_DIST_NODE_NAME remains unset"
-        exit 1
-    fi
-
-    # Use longnames by default.
-    # They are required to form a cluster across diffrent machines.
-    # In development, we also use longnames (when starting a new node).
-    export RELEASE_DISTRIBUTION=${JF_DIST_MODE:-${RELEASE_DISTRIBUTION:-name}}
+    # If Jellyfish is meant to be run in a cluster,
+    # leave node setup to the Elixir code where
+    # we do extra steps for DNS strategy to determine actual node name.
+    #
+    # We also try to read RELEASE_DISTRIBUTION env var
+    # to allow for calling `remote` command with JF_DIST_ENABLED set.
+    # In other case, RELEASE_DISTRIBUTION will always be set to none.
+    # This is a little hack. 
+    # We can get rid of it once we move to the reverse DNS strategy.
+    export RELEASE_DISTRIBUTION=${RELEASE_DISTRIBUTION:-none}
 
     # We only set min and max ports for start and daemon commands.
     # In other case, when someone wants to expose only one port
