Read JF_DIST_* env vars. Remove divo.

--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -2,7 +2,7 @@
 # those provided by mix release.
 # This is to have a unified way of configuring Fishjam distribution
 # in both development and production environments
-if [ "$FJ_DIST_ENABLED" == "true" ]; then
+if [[ "$FJ_DIST_ENABLED" == "true" || "$JF_DIST_ENABLED" == "true" ]]; then
     # If Fishjam is meant to be run in a cluster,
     # leave node setup to the Elixir code where
     # we do extra steps for DNS strategy to determine actual node name.
@@ -18,20 +18,32 @@ if [ "$FJ_DIST_ENABLED" == "true" ]; then
     # In other case, when someone wants to expose only one port
     # (FJ_DIST_MIN_PORT==FJ_DIST_MAX_PORT), we won't be able to
     # connect to already running node with the `remote` command.
-    if [ "$FJ_DIST_MIN_PORT" != "" ]; then
+    if [[ "$FJ_DIST_MIN_PORT" != "" || "$JF_DIST_MIN_PORT" != "" ]]; then
+        if [ "$FJ_DIST_MIN_PORT" != "" ]; then
+            DIST_MIN_PORT="$FJ_DIST_MIN_PORT"
+        else
+            DIST_MIN_PORT="$JF_DIST_MIN_PORT"
+        fi
+
         case $RELEASE_COMMAND in
         start* | daemon*)
-            ELIXIR_ERL_OPTIONS="$ELIXIR_ERL_OPTIONS -kernel inet_dist_listen_min $FJ_DIST_MIN_PORT"
+            ELIXIR_ERL_OPTIONS="$ELIXIR_ERL_OPTIONS -kernel inet_dist_listen_min $DIST_MIN_PORT"
             export ELIXIR_ERL_OPTIONS
             ;;
         *) ;;
         esac
     fi
 
-    if [ "$FJ_DIST_MAX_PORT" != "" ]; then
+    if [[ "$FJ_DIST_MAX_PORT" != "" || "$JF_DIST_MAX_PORT" != "" ]]; then
+        if [ "$FJ_DIST_MAX_PORT" != "" ]; then
+            DIST_MAX_PORT="$FJ_DIST_MAX_PORT"
+        else
+            DIST_MAX_PORT="$JF_DIST_MAX_PORT"
+        fi
+
         case $RELEASE_COMMAND in
         start* | daemon*)
-            ELIXIR_ERL_OPTIONS="$ELIXIR_ERL_OPTIONS -kernel inet_dist_listen_max $FJ_DIST_MAX_PORT"
+            ELIXIR_ERL_OPTIONS="$ELIXIR_ERL_OPTIONS -kernel inet_dist_listen_max $DIST_MAX_PORT"
             export ELIXIR_ERL_OPTIONS
             ;;
         *) ;;
